--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,10 @@
     padding-top: 10px;
 }
 
+.project-section h3{
+    margin-bottom: 15px;
+}
+
 #project-team .team-member.facilitador{
     background-color: blanchedalmond;
 }
